fix bottom spacing

--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -55,7 +55,7 @@
 }
 
 @font-face {
-  font-family: 'Mark';
+  font-family: 'Mark-Book';
   src: url('/fonts/mark/Mark-Book.eot');
   src: local('Mark-Book'),
       url('/fonts/mark/Mark-Book.eot?#iefix') format('embedded-opentype'),
